# detr_resnet_50_character_recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: dataset.py  models.py  predict.py  train.py
