[project]
name = "detr_resnet_50_object_detection"
version = "0.1.0"
description = "This is part of an NYCU course on computer vision. It contains code for training a DETR model with Resnet 50 backbone on a digit dataset."
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.8",
  "torch==2.11.0+cu130",
  "torchvision==0.26.0+cu130",
  "tqdm>=4.67.3",
  "pandas>=3.0.2",
  "transformers>=5.5.4",
  "pycocotools>=2.0.11",
  "timm>=1.0.26",
  "pillow>=12.2.0",
  "albumentations>=2.0.8",
  "numpy>=2.4.4",
  "accelerate>=1.1.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch" }
]
torchvision = [
    { index = "pytorch" }
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[dependency-groups]
dev = ["ruff>=0.11.5"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
